# serializer version: 1
# name: test_all_entities[device_tracker.landevice1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.landevice1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'LanDevice1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LanDevice1',
    'platform': 'vodafone_station',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_tracker',
    'unique_id': 'yy:yy:yy:yy:yy:yy',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.landevice1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LanDevice1',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'LanDevice1',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.1.11',
      <ScannerEntityStateAttribute.MAC: 'mac'>: 'yy:yy:yy:yy:yy:yy',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.landevice1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_all_entities[device_tracker.wifidevice0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.wifidevice0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'WifiDevice0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'WifiDevice0',
    'platform': 'vodafone_station',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_tracker',
    'unique_id': 'xx:xx:xx:xx:xx:xx',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.wifidevice0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WifiDevice0',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'WifiDevice0',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.1.10',
      <ScannerEntityStateAttribute.MAC: 'mac'>: 'xx:xx:xx:xx:xx:xx',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.wifidevice0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
